fix(settingsModal): fix flickering on small screen sizes on the settings buttons (#785)
fixes: #784

--- a/src/features/general/cauNavbar.module.scss
+++ b/src/features/general/cauNavbar.module.scss
@@ -32,7 +32,7 @@ $estimated-marquee-height: 25px;
             opacity: 0;
             pointer-events: none;
         }
-        @media (prefers-reduced-motion: no-preference) {
+        @include mixins.animated {
             transition:
                 top 0.2s ease-in-out,
                 opacity 0.2s ease-in-out;
