--- a/src/style/index.module.scss
+++ b/src/style/index.module.scss
@@ -22,7 +22,7 @@
         content: '\f252' !important;
 
         :local {
-            @media (prefers-reduced-motion: no-preference) {
+            @include mixins.animated {
                 animation: fade 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
             }
         }
@@ -61,7 +61,7 @@
 
 :local(.shining) {
     // Add a little shining effect onto an element
-    @media (prefers-reduced-motion: no-preference) {
+    @include mixins.animated {
         position: relative;
         // add a shining effect
         background-image: linear-gradient(
